add tree code and dep to the repo

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "antd": "5.0.1",
         "dayjs": "1.11.6",
         "jquery": "3.6.1",
+        "jquery.fancytree": "2.38.2",
         "lodash": "4.17.21",
         "normalize.css": "8.0.1",
         "react": "18.2.0",
@@ -72,6 +73,7 @@
         "@types/html-minifier": "4.0.2",
         "@types/html-webpack-plugin": "3.2.6",
         "@types/jquery": "3.5.14",
+        "@types/jquery.fancytree": "0.0.7",
         "@types/lodash": "4.14.190",
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
@@ -135,7 +137,7 @@
         "ts-node": "10.9.1",
         "typescript": "4.9.3",
         "wait-on": "6.0.1",
-        "webext-bridge": "5.0.5",
+        "webext-bridge": "../webext-bridge",
         "webpack": "5.75.0",
         "webpack-bundle-analyzer": "4.7.0",
         "webpack-dev-middleware": "6.0.0",
