--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,14 @@
     },
     "[html][css][less][scss][markdown][xml][yaml][svg]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/node_modules": true
     }
 }
