fix syntax & type errors

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -32,7 +32,8 @@
         "baseUrl": "./",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "types": ["jquery.fancytree", "jquery", "webext-bridge"]
     },
     "exclude": ["manifest.ts"]
 }
