--- a/package.json
+++ b/package.json
@@ -47,9 +47,8 @@
     "dependencies": {
         "antd": "5.0.1",
         "dayjs": "1.11.6",
-        "jquery": "3.6.1",
-        "jquery.fancytree": "2.38.2",
         "lodash": "4.17.21",
+        "mustache": "4.2.0",
         "normalize.css": "8.0.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -58,12 +57,14 @@
     },
     "devDependencies": {
         "@babel/core": "7.20.2",
+        "@babel/plugin-proposal-class-properties": "7.18.6",
         "@babel/plugin-proposal-decorators": "7.20.2",
         "@babel/plugin-transform-react-constant-elements": "7.20.2",
         "@babel/plugin-transform-runtime": "7.19.6",
         "@babel/preset-env": "7.20.2",
         "@babel/preset-react": "7.18.6",
         "@babel/preset-typescript": "7.18.6",
+        "@babel/runtime": "7.20.6",
         "@nuxt/friendly-errors-webpack-plugin": "2.5.2",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
         "@swc/core": "1.3.19",
@@ -75,6 +76,7 @@
         "@types/jquery": "3.5.14",
         "@types/jquery.fancytree": "0.0.7",
         "@types/lodash": "4.14.190",
+        "@types/mustache": "4.2.2",
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.9",
