ignore lib dir for stylelint; recover import-sorter.json

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -22,5 +22,5 @@
             "customSyntax": "postcss-less"
         }
     ],
-    "ignoreFiles": ["node_modules/**/*", "extension/**/*", "public/**/*", "**/*.d.ts"]
+    "ignoreFiles": ["node_modules/**/*", "extension/**/*", "public/**/*", "**/*.d.ts", "lib/**/*"]
 }
