--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "lint:style": "stylelint --config .stylelintrc.json src/**/*.{css,less,scss}",
         "clean": "rimraf -rf ./extension ./dist ./*.zip ./*.crx",
         "reinstall": "rimraf -rf ./node_modules && pnpm",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test-ext": "ts-node ./test/bootstrap.ts"
     },
     "lint-staged": {
         "*.{ts,tsx,js}": [
@@ -73,7 +74,9 @@
         "@types/express": "4.17.14",
         "@types/html-minifier": "4.0.2",
         "@types/html-webpack-plugin": "3.2.6",
+        "@types/jest": "29.2.5",
         "@types/jquery": "3.5.14",
+        "@types/jqueryui": "1.12.16",
         "@types/lodash": "4.14.190",
         "@types/mustache": "4.2.2",
         "@types/node": "18.11.9",
@@ -113,6 +116,7 @@
         "html-webpack-tags-plugin": "3.0.2",
         "http-proxy-middleware": "2.0.6",
         "husky": "8.0.2",
+        "jest": "29.3.1",
         "less": "4.1.3",
         "less-loader": "11.1.0",
         "lightningcss": "1.16.1",
@@ -122,6 +126,7 @@
         "postcss-less": "6.0.0",
         "postcss-scss": "4.0.5",
         "prettier": "2.8.0",
+        "puppeteer": "19.4.1",
         "react-devtools": "4.26.1",
         "react-refresh": "0.14.0",
         "rimraf": "3.0.2",
@@ -135,6 +140,7 @@
         "stylelint-declaration-block-no-ignored-properties": "2.6.0",
         "stylelint-scss": "4.3.0",
         "terser-webpack-plugin": "5.3.6",
+        "ts-jest": "29.0.3",
         "ts-node": "10.9.1",
         "typescript": "4.9.3",
         "wait-on": "6.0.1",
