--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
             "fileMatch": ["/**/src/manifest.dev.json", "/**/src/manifest.prod.json"],
             "url": "http://json.schemastore.org/chrome-manifest"
         }
-    ]
+    ],
+    "jest.autoRun": "off"
 }
