--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "@babel/preset-react": "7.18.6",
         "@babel/preset-typescript": "7.18.6",
         "@babel/runtime": "7.20.6",
+        "@garinz/webext-bridge": "5.0.6",
         "@nuxt/friendly-errors-webpack-plugin": "2.5.2",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
         "@swc/core": "1.3.19",
@@ -83,6 +84,7 @@
         "@types/react": "18.0.25",
         "@types/react-dom": "18.0.9",
         "@types/react-router-dom": "5.3.3",
+        "@types/sinon-chrome": "2.2.11",
         "@types/wait-on": "5.3.1",
         "@types/webextension-polyfill": "0.9.1",
         "@types/webpack": "5.28.0",
@@ -94,9 +96,11 @@
         "@yutengjing/prettier-config": "0.0.1",
         "ansi-colors": "4.1.3",
         "antd-dayjs-webpack-plugin": "1.0.6",
+        "babel-jest": "29.3.1",
         "babel-loader": "9.1.0",
         "babel-plugin-import": "1.13.5",
         "babel-plugin-lodash": "3.3.4",
+        "babel-plugin-transform-es2015-modules-commonjs": "6.26.2",
         "browserslist": "4.21.4",
         "chokidar": "3.5.3",
         "consola": "2.15.3",
@@ -116,7 +120,11 @@
         "html-webpack-tags-plugin": "3.0.2",
         "http-proxy-middleware": "2.0.6",
         "husky": "8.0.2",
+        "identity-obj-proxy": "3.0.0",
         "jest": "29.3.1",
+        "jest-environment-jsdom": "29.3.1",
+        "jquery": "3.6.3",
+        "jquery.fancytree": "2.38.2",
         "less": "4.1.3",
         "less-loader": "11.1.0",
         "lightningcss": "1.16.1",
@@ -132,6 +140,7 @@
         "rimraf": "3.0.2",
         "sass": "1.56.1",
         "sass-loader": "13.2.0",
+        "sinon-chrome": "3.0.1",
         "ssestream": "1.1.0",
         "stylelint": "14.15.0",
         "stylelint-config-prettier": "9.0.4",
@@ -140,11 +149,9 @@
         "stylelint-declaration-block-no-ignored-properties": "2.6.0",
         "stylelint-scss": "4.3.0",
         "terser-webpack-plugin": "5.3.6",
-        "ts-jest": "29.0.3",
         "ts-node": "10.9.1",
         "typescript": "4.9.3",
         "wait-on": "6.0.1",
-        "webext-bridge": "../webext-bridge",
         "webpack": "5.75.0",
         "webpack-bundle-analyzer": "4.7.0",
         "webpack-dev-middleware": "6.0.0",
