--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -34,7 +34,8 @@
             "@/*": ["src/*"]
         },
         "typeRoots": ["../node_modules/@types", "./typings"],
-        "types": ["jquery", "webext-bridge"]
+        "types": ["jquery", "webext-bridge", "jquery.fancytree"]
     },
+    "include": ["src/**/*"],
     "exclude": ["manifest.ts"]
 }
