--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         "target": "ES2022",
         "module": "ESNext",
         "baseUrl": "./",
-        "types": ["jquery", "webext-bridge", "jquery.fancytree", "jest", "ts-jest"]
+        "types": ["jquery", "webext-bridge", "jquery.fancytree", "jest"],
+        "typeRoots": ["node_modules/@types", "src/typings"]
     },
     "exclude": ["manifest.ts"]
 }
