--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -36,6 +36,6 @@
         "typeRoots": ["../node_modules/@types", "./typings"],
         "types": ["jquery", "webext-bridge", "jquery.fancytree"]
     },
-    "include": ["src/**/*"],
+    //    "include": ["src/**/*"],
     "exclude": ["manifest.ts"]
 }
