--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
         "cross-env": "7.0.3",
         "css-loader": "6.7.2",
         "css-minimizer-webpack-plugin": "4.2.2",
+        "dexie": "3.2.3",
         "eslint": "8.28.0",
         "exit-hook": "2.2.1",
         "express": "4.18.2",
