--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
         "webpack-hot-middleware": "2.25.3",
         "webpack-merge": "5.8.0",
         "webpackbar": "5.0.2",
-        "yargs": "17.6.2"
+        "yargs": "17.6.2",
+        "type-fest": "0.20.2"
     }
 }
