--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "@types/html-webpack-plugin": "3.2.6",
         "@types/jest": "29.2.5",
         "@types/jquery": "3.5.14",
+        "@types/jquery.contextmenu": "1.7.35",
         "@types/jqueryui": "1.12.16",
         "@types/lodash": "4.14.190",
         "@types/mustache": "4.2.2",
@@ -125,6 +126,7 @@
         "jest": "29.3.1",
         "jest-environment-jsdom": "29.3.1",
         "jquery": "3.6.3",
+        "jquery-contextmenu": "2.9.2",
         "jquery.fancytree": "2.38.2",
         "less": "4.1.3",
         "less-loader": "11.1.0",
@@ -150,6 +152,7 @@
         "stylelint-scss": "4.3.0",
         "terser-webpack-plugin": "5.3.6",
         "ts-node": "10.9.1",
+        "type-fest": "0.20.2",
         "typescript": "4.9.3",
         "wait-on": "6.0.1",
         "webpack": "5.75.0",
@@ -158,7 +161,6 @@
         "webpack-hot-middleware": "2.25.3",
         "webpack-merge": "5.8.0",
         "webpackbar": "5.0.2",
-        "yargs": "17.6.2",
-        "type-fest": "0.20.2"
+        "yargs": "17.6.2"
     }
 }
