--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "@garinz/webext-bridge": "5.0.6",
         "@nuxt/friendly-errors-webpack-plugin": "2.5.2",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.10",
+        "@reduxjs/toolkit": "1.9.2",
         "@swc/core": "1.3.19",
         "@types/chrome": "0.0.203",
         "@types/cors": "2.8.12",
@@ -138,6 +139,7 @@
         "postcss-scss": "4.0.5",
         "prettier": "2.8.0",
         "react-devtools": "4.26.1",
+        "react-redux": "8.0.5",
         "react-refresh": "0.14.0",
         "rimraf": "3.0.2",
         "sass": "1.56.1",
