[bugfix] url missing error

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "antd": "5.0.1",
         "dayjs": "1.11.6",
         "lodash": "4.17.21",
+        "loglevel": "1.8.1",
         "mustache": "4.2.0",
         "normalize.css": "8.0.1",
         "react": "18.2.0",
