--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -35,7 +35,14 @@
             "?/*": ["test/*"]
         },
         "typeRoots": ["../node_modules/@types", "./typings"],
-        "types": ["jquery", "webext-bridge", "jquery.fancytree", "jquery.contextMenu", "react"]
+        "types": [
+            "jquery",
+            "webext-bridge",
+            "jquery.fancytree",
+            "jquery.contextMenu",
+            "react",
+            "loglevel"
+        ]
     },
     //    "include": ["src/**/*"],
     "exclude": ["manifest.ts"]
