--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "dependencies": {
         "antd": "5.0.1",
         "dayjs": "1.11.6",
+        "firebase": "9.17.1",
+        "firebaseui": "6.0.2",
         "lodash": "4.17.21",
         "loglevel": "1.8.1",
         "mustache": "4.2.0",
