[hold] holding dev for login feature

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -41,7 +41,8 @@
             "jquery.fancytree",
             "jquery.contextMenu",
             "react",
-            "loglevel"
+            "loglevel",
+            "chrome"
         ]
     },
     "exclude": ["manifest.ts"]
