[feature|import|unfinished] import data transport by localStorage

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -42,7 +42,8 @@
             "jquery.contextMenu",
             "react",
             "loglevel",
-            "chrome"
+            "chrome",
+            "wicg-file-system-access"
         ]
     },
     "exclude": ["manifest.ts"]
