[feature] add shortcut & shortcut tip btn

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "firebaseui": "6.0.2",
         "lodash": "4.17.21",
         "loglevel": "1.8.1",
+        "mousetrap": "1.6.5",
         "mustache": "4.2.0",
         "normalize.css": "8.0.1",
         "react": "18.2.0",
@@ -83,6 +84,7 @@
         "@types/jquery.contextmenu": "1.7.35",
         "@types/jqueryui": "1.12.16",
         "@types/lodash": "4.14.190",
+        "@types/mousetrap": "1.6.11",
         "@types/mustache": "4.2.2",
         "@types/node": "18.11.9",
         "@types/react": "18.0.25",
