--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "browserslist": "Chrome >= 96",
     "description": "Vertical Tabs Sidebar, But In Tree Structure",
     "author": "Garin",
-    "license": "MIT",
+    "license": "AGPL-3.0",
     "homepage": "https://linkmap.cc",
     "repository": {
         "type": "git",
