--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "clean": "rimraf -rf ./extension ./dist ./*.zip ./*.crx",
         "reinstall": "rimraf -rf ./node_modules && pnpm",
         "prepare": "husky install",
-        "test-ext": "jest --config ./jest.config.js"
+        "test-ext": "jest --config ./jest.config.js",
+        "package": "./build-target.sh"
     },
     "lint-staged": {
         "*.{ts,tsx,js}": [
